     code causing crashes for some users (bug #21449).
   * Fixed broken image references in the Gameplay -> Time of Day help topic.
   * The internal variables used by the LIMIT_RECRUITS WML macro are now
     cleared on victory.
   * Fixed missing log error message for invalid music tracks set with
     play_once=yes (bug #21479).

Version 1.11.8:
 * Add-ons client:
   * Introduced new add-on type "SP/MP Campaign" for campaigns with
     "type=hybrid."
   * Fixed invalid file size data from the server crashing the client on the
     network transfer progress dialog (bug #20893).
   * Added support for specifying a feedback page URL in the .pbl file when
     publishing an add-on, currently intended for associating add-ons in the
     official add-ons server with topics from forums.wesnoth.org; this is
     achieved by including a [feedback] block with a topic_id=<number> key in
     it.
   * Redesigned Add-ons Description dialog, including support for displaying
     add-on feedback page URLs.
 * Add-ons server:
   * Fixed mishandling of inaccessible add-on packs resulting in multiple data
     conversion errors and stalling clients (bug #20893).
   * Added support for managing and emitting add-on feedback page URLs to
     clients ([server_info] feedback_url_format option in the server
     configuration file).
 * AI:
   * RCA AI: fix bug #21334: surrounded units don't attack
   * Coward Micro AI: new optional parameter [filter_second]
   * Simple Attack Micro AI: new optional parameter weapon=
   * Wolves Micro AI: fix bug that sometimes kept predators from attacking
   * Lua AI: new replay-safe action ai.synced_command()
   * ai.cfg: fix MEDIUM to NORMAL in attack_depth macro
 * Campaigns:
   * all: convert many wmllint magic comments from "recognize" to "who" and
     "whofield",
   * Dead Water:
     * New world map.
   * Delfador's Memoirs:
     * Updated sprite and animations for the Wose Shaman.
   * Descent into Darkness: