@@ -26,6 +26,7 @@ Version 1.11.8+dev:
      cleared on victory.
    * Fixed missing log error message for invalid music tracks set with
      play_once=yes (bug #21479).
+   * Don't force the .gz suffix on every entry of the save_index (bug #20849).
 
 Version 1.11.8:
  * Add-ons client:
